--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     def retrofit_version = '2.9.0'
     def rxjava_version = '3.0.6'
     def rxandroid_version = '3.0.0'
